invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_60.src
.IPPcode24
OR LF@a int@49